nexus/nexus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - name: ui
      port: 8081
      targetPort: 8081
    - name: docker
      port: 5000
      targetPort: 5000
